<resources>

    <string name="app_name">ContainerHub</string>
    <string name="action_settings">Settings</string>
    <string name="imgdesc">imgdesc</string>
    <string name="imgfb">Facebook icon display</string>
    <string name="imgmaps">Google-Maps icon display</string>
    <string name="imggplus">Google-Plus icon display</string>
    <string name="action_search">Search</string>
    
    
    <!-- List Container Fragment Strings -->
    <string name="container_item_title_location">LOCATION:</string>
    <string name="container_item_title_departureDate">DEPARTURE DATE:</string>
    <string name="container_item_title_to">DESTINATION:</string>

    <!-- Post Container Fragment Strings -->
    <string name="post_container_lable_containerDetails">Container Details</string>
    <string name="post_container_lable_location">Location</string>
    <string name="post_container_lable_destination">Destination</string>
    <string name="post_container_lable_status">How Full</string>
    <string name="post_container_lable_depDate">Dep. Date</string>
    <string name="post_container_textHint_dateFormat">yyyy-mm-dd</string>
    <string name="post_container_contentDescription_image">container image</string>
    <string name="post_container_lable_camera">Camera</string>
    <string name="post_container_button_lable_SelectImage">Select</string>
    <string name="post_container_lable_ownerDetails">Owner Details</string>
    <string name="post_container_lable_nameOfOwner">Name</string>
    <string name="post_container_lable_ownerPhone">Phone</string>
    <string name="post_container_lable_ownerEmail">Email</string>
    <string name="post_container_button_lable_upload">Upload</string>
    <string name="post_container_lable_arrvDate">Arrv. Date</string>
    <string name="post_container_textHint_location_city">City</string>
    <string name="post_container_textHint_location_country">Country</string>
    <string name="post_container_lable_palletPrice">Pallet Price:</string>
    <string name="post_container_lable_cattonPrice">Cartton Price:</string>
    <string name="post_container_textHint_Price">SEK 100,00</string>
    <string name="post_container_palletImage_contentDescription">palletDefaultImage</string>
    <string name="post_container_lable_numberOfPalletsAvailable">No. Available</string>
    <string name="post_container_cartonImage_contentDescription">cartonDefualtImage</string>
    <string name="post_container_lable_numberOfCartonsAvailable">No. Available</string>

    <!-- Login Activity Strings -->
    <!-- string name="title_activity_login">Sign in</string-->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    
    <!-- Post Container Activity String -->
    <string name="title_postContainer_Activity">Post A Container</string>
    
    
    <!-- Container List Activity -->
    <string name="title_containerList_Activity">Container List</string>
    <string name="loading_container_progress">Loading Containers</string>
    <string name="title_containerList_searchLocation">From:</string>
    <string name="title_containerList_searchDestination">To:</string>
    <string name="title_containerList_searchBtn">Search</string>
    <string name="promt_containerList_noResults">No containers were found that match your search. 
        Please modify your search and try again.</string>
    <string name="title_containerList_searchAgainBtn">Search Again</string>
    
    <!-- SortContainers Fragment -->
    <string name="sortbyfragement_title">Sort by: </string>
    <string-array
        name = "sortbyfragment_sortcriteria">
        <item>Departure Date</item>
        <item>Arrival Date</item>
        <item>Pallet Price</item>
        <item>Carton Price</item>
        <item>Pallets Available</item>
        <item>Cartons Available</item>
        <item>Container Progress</item>
    </string-array>

    
    <!-- Main Activity String -->
    <string-array name="titles">
        <item>Search</item>
        <item>Post Container</item>
        <item>I\'m Looking For</item>
        <item>ContainerHub</item>
    </string-array>
    
    <!-- Container Info Fragment Strings -->
    <string name = "containerInfoFragment_pallet_image_description">pallet image</string>
    <string name = "containerInfoFragment_cartton_Image_desription">carton image</string>
    <string name = "containerInfoFragment_button_call_text">Call</string>
    <string name = "containerInfoFragment_button_email_text">Email</string>
    <string name = "containerInfoFragment_heading_palletPrice">PALLET  PRICE:</string>
    <string name = "containerInfoFragment_heading_palletsAvailable">No. AVAILABLE:</string>
    <string name = "containerInfoFragment_heading_cartonPrice">CARTON PRICE:</string>
    <string name = "containerInfofragment_heading_cartonsAvailable">No. AVAILABLE:</string>
    <string name = "containerInfoFragment_arrivalDate">ARRIVAL DATE:</string>
    <string name = "containerInfoFragment_progress">PROGRESS:</string>
    
    <!-- Facebook login -->
    <string name="app_id">268351303366148</string>

    
    <!-- Icon Resources -->
    <array name="icons">
        <item>@drawable/ic_action_search</item>
        <item>@drawable/ic_action_paste</item>
        <item>@drawable/ic_action_locate</item>
    </array>

</resources>