<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp" >

        <!-- Container Information Block -->
        <!-- Container Title -->

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_container_lable_containerDetails"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/main_menu_color"
            android:padding="5dp"
            android:paddingBottom="9dp"
            android:shrinkColumns="1"
            android:stretchColumns="1" >

            <!-- Container Location -->

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post_container_lable_location" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/post_contn_form_containerLocation_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="City"
                        android:inputType="textPostalAddress" />

                    <EditText
                        android:id="@+id/containerList_search_FromCountry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="Country" />

                </LinearLayout>

            </TableRow>

            <!-- Contianer Destination -->

            <TableRow
                android:id="@+id/tableRow9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post_container_lable_destination" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/post_contn_form_containerDestination_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="City"
                        android:inputType="textPostalAddress" />

                    <EditText
                        android:id="@+id/containerList_search_ToCountry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="Country" />

                </LinearLayout>

            </TableRow>

            <!-- Container filled Status -->

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post_container_lable_status" />

                <SeekBar
                    android:id="@+id/post_contn_form_containerProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <!-- Container Departure Date -->


            <!-- Contianer Arrival Date -->
        </TableLayout>

        <!-- Selected Container Icon Image -->

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="9dp"
            android:stretchColumns="1" >

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post_container_lable_depDate" />

                <EditText
                    android:id="@+id/post_contn_form_containerDepartureDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:ems="10"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/post_container_textHint_dateFormat" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post_container_lable_arrvDate" />

                <EditText
                    android:id="@+id/post_contn_form_containerArrivalDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="center_vertical|left"
                    android:hint="@string/post_container_textHint_dateFormat"
                    android:inputType="date" />
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:paddingRight="10dp"
                android:src="@drawable/palet" />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/container_list_background_color"
                android:paddingBottom="20dp"
                android:shrinkColumns="1" >

                <TableRow
                    android:id="@+id/TableRow02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/containerDetails_cartonPrice"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/post_container_lable_palletPrice" />

                    <EditText
                        android:id="@+id/post_contn_form_palletPrice"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/post_container_textHint_Price"
                        android:inputType="textAutoCorrect" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="No. Available:" />

                    <EditText
                        android:id="@+id/post_contn_form_palletsAvailable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="number" />
                </TableRow>
            </TableLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:paddingRight="10dp"
                android:src="@drawable/box" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/main_menu_color"
                android:shrinkColumns="1" >

                <TableRow
                    android:id="@+id/TableRow01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/TextView01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/post_container_lable_cattonPrice" />

                    <EditText
                        android:id="@+id/post_contn_form_cartonPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|left"
                        android:hint="@string/post_container_textHint_Price"
                        android:inputType="textAutoCorrect" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="No. Available:" />

                    <EditText
                        android:id="@+id/post_contn_form_cartonsAvailable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="number" />
                </TableRow>
            </TableLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/post_container_containerImage"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:contentDescription="@string/post_container_contentDescription_image"
            android:src="@drawable/container_default" />

        <!-- Take or Select Image from gallery -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp" >

            <Button
                android:id="@+id/post_contn_capturecameraImg"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/post_container_lable_camera" />

            <Button
                android:id="@+id/post_contn_selectImg"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/post_contn_capturecameraImg"
                android:text="@string/post_container_button_lable_SelectImage" />
        </RelativeLayout>

        <!-- Owner Information Block -->

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/post_container_lable_ownerDetails"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@color/container_list_background_color"
            android:padding="5dp"
            android:stretchColumns="1" >

            <!-- Owner Name -->

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post_container_lable_nameOfOwner" />

                <EditText
                    android:id="@+id/containerDetails_ownerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textSize="12sp" >

                    <requestFocus />
                </EditText>
            </TableRow>

            <!-- Owner Phone -->

            <TableRow
                android:id="@+id/tableRow6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post_container_lable_ownerPhone" />

                <EditText
                    android:id="@+id/containerDetails_ownerPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="phone"
                    android:textSize="@dimen/containerInfo_majorHeadings_textsize" />

            </TableRow>

            <!-- Owner Email -->

            <TableRow
                android:id="@+id/tableRow7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post_container_lable_ownerEmail" />

                <EditText
                    android:id="@+id/containerDetails_ownerEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/containerInfo_majorHeadings_textsize" />

            </TableRow>
        </TableLayout>

        <!-- Submit Button -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/post_contn_uploadContainer"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/post_container_button_lable_upload" />
        </RelativeLayout>

    </LinearLayout>

</ScrollView>